<resources>
    <string name="app_name">TransLinkTravel</string>
    <string name="action_settings">Settings</string>
    <string name="api_key_instructions">Register for an API Key to use the TransLink services.</string>
    <string name="api_key_registration_url">https://developer.translink.ca/Account/Register</string>
    <string name="api_key">API Key</string>
    <string name="api_key_error_message">Please enter a valid API Key</string>
    <string name="submit">Submit</string>

    <string name="home_page_title">TransLink Travel</string>
    <string name="button_buses_near_me">Bus Stops</string>
    <string name="button_favourites">Favourites</string>
    <string name="no_nearby_bus_stops">No nearby bus stops found</string>
    <string name="no_bus_stop_details">No bus route details found for this stop</string>
</resources>
