<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#85CDCD">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="28dp"
        android:textStyle="bold"
        android:paddingBottom="30dp"
        android:text="@string/home_page_title" />

    <Button
        android:id="@+id/button_bus_page"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/button_buses_near_me" />

    <!--<Button-->
        <!--android:id="@+id/button_favourites_page"-->
        <!--android:layout_width="200dp"-->
        <!--android:layout_height="50dp"-->
        <!--android:text="@string/button_favourites" />-->

    <Button
        android:id="@+id/button_registration_page"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/api_key" />

</LinearLayout>